--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,6 @@
 <h2><%= @book.title %></h2>
 <h3><%= @book.author %></h3>
+<%= image_tag @book.avatar if @book.avatar.attached? %>
 <h4>Category: <%= @book.category.name%></h4>
 
 <p><%= @book.description %></p>
