added bootstrap gem

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,3 +7,5 @@
     <h2><%= link_to book.title, book_path(book) %></h2>
   <% end %>
 <% end %>
+
+<button type="button" class="btn btn-primary">Primary</button>
