--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,3 +9,5 @@
 <% end %>
 
 <button type="button" class="btn btn-primary">Primary</button>
+
+<button type="button" class="btn btn-outline-secondary">Secondary</button>
