added autocloseable alert

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,17 @@
         </ul>
       </div>
     </nav>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if notice %>
+  <div class="alert alert-success alert-dismissible fade show auto-dismiss" role="alert">
+    <%= notice %>
+  </div>
+<% end %>
+
+<% if alert %>
+  <div class="alert alert-danger alert-dismissible fade show auto-dismiss" role="alert">
+    <%= alert %>
+  </div>
+<% end %>
     <%= yield %>
   </body>
 </html>
