--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,12 +1,49 @@
-<%= simple_form_for @book, :html => { :multipart => true } do |f| %>
-  <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select a category") %>
-  <%= f.input :title, label: "Book Title" %>
-  <%= f.input :description %>
-  <%= f.input :author %>
-  <div>
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow">
+        <div class="card-header bg-primary text-white">
+          <h3 class="mb-0">Add New Book</h3>
+        </div>
+        <div class="card-body">
+          <%= simple_form_for @book, html: { multipart: true, class: "form" } do |f| %>
+            
+            <div class="mb-3">
+              <%= f.label :category_id, "Category", class: "form-label" %>
+              <%= select_tag(:category_id, 
+                            options_for_select(@categories), 
+                            prompt: "Select a category", 
+                            class: "form-select") %>
+            </div>
+            
+            <%= f.input :title, 
+                        label: "Book Title", 
+                        input_html: { class: "form-control" },
+                        wrapper_html: { class: "mb-3" },
+                        label_html: { class: "form-label" } %>
+            
+            <%= f.input :description,
+                        input_html: { class: "form-control", rows: 4 },
+                        wrapper_html: { class: "mb-3" },
+                        label_html: { class: "form-label" } %>
+            
+            <%= f.input :author,
+                        input_html: { class: "form-control" },
+                        wrapper_html: { class: "mb-3" },
+                        label_html: { class: "form-label" } %>
+            
+            <div class="mb-3">
+              <%= f.label :avatar, class: "form-label" %>
+              <%= f.file_field :avatar, class: "form-control" %>
+              <div class="form-text text-muted">Upload book cover image</div>
+            </div>
+            
+            <div class="d-grid gap-2 mt-4">
+              <%= f.button :submit, class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-  <%= f.button :submit %>
-
-<% end %>
+</div>
