--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,38 +11,61 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <%= link_to "Book Review", root_path, class: "navbar-brand" %>
-        </div>
-
-        <ul class="nav navbar-nav">
-          <li><%= link_to "Sign Up", new_user_registration_path%></li>
-          <% if user_signed_in? %>
-            <li><%= link_to "Sign Out", destroy_user_session_path, method: :destroy %></li>
-          <% else %>
-            <li><%= link_to "Log In", new_user_session_path %></li>
-          <% end %>
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              Categories <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <%Category.all.each do |category| %>
-                  <%= link_to category.name, books_path(category: category.name), class: "link"%>
-              <% end %>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <!-- Left side - Brand only -->
+    <div>
+      <%= link_to "Book Review", root_path, class: "navbar-brand" %>
+    </div>
+    
+    <!-- Toggle button for mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+      aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <!-- Right side - All other elements -->
+    <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+      <ul class="navbar-nav">
+        <!-- Categories Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="categoryDropdown" role="button" 
+             data-bs-toggle="dropdown" aria-expanded="false">
+            Categories
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
+            <% Category.all.each do |category| %>
+              <li>
+                <%= link_to category.name, books_path(category: category.name), class: "dropdown-item" %>
+              </li>
+            <% end %>
+          </ul>
+        </li>
+        
+        <!-- Add Book - Only visible when signed in -->
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Add Book", new_book_path, class: "nav-link" %>
           </li>
+        <% end %>
+        
+        <!-- Authentication Links -->
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
           </li>
-          <% if user_signed_in? %>
-            <li><%= link_to "Add Book", new_book_path %></li>
-          <% end %>
-        </ul>
-      </div>
-    </nav>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Log In", new_user_session_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
     <% if notice %>
   <div class="alert alert-success alert-dismissible fade show auto-dismiss" role="alert">
     <%= notice %>
