--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,44 @@
-<h1>Edit Book</h1>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow">
+        <div class="card-header bg-primary text-white">
+          <h2 class="mb-0">Edit Book</h2>
+        </div>
+        <div class="card-body">
+          <%= simple_form_for @book, html: { multipart: true, class: "form" } do |f| %>
 
-<%= simple_form_for @book, :html => { :multipart => true } do |f| %>
-  <%= f.select :category_id, @categories %>
-  <%= f.input :title, label: "Book Title" %>
-  <%= f.input :description %>
-  <%= f.input :author %>
-  <%= f.button :submit %>
+            <div class="mb-3">
+              <%= f.label :category_id, "Category", class: "form-label" %>
+              <%= f.select :category_id, 
+                          @categories, 
+                          {}, 
+                          { class: "form-select" } %>
+            </div>
 
-<% end %>
+            <%= f.input :title, 
+                        label: "Book Title", 
+                        input_html: { class: "form-control" },
+                        wrapper_html: { class: "mb-3" },
+                        label_html: { class: "form-label" } %>
+
+            <%= f.input :description,
+                        input_html: { class: "form-control", rows: 4 },
+                        wrapper_html: { class: "mb-3" },
+                        label_html: { class: "form-label" } %>
+
+            <%= f.input :author,
+                        input_html: { class: "form-control" },
+                        wrapper_html: { class: "mb-3" },
+                        label_html: { class: "form-label" } %>
+
+            <div class="d-flex justify-content-between mt-4">
+              <%= link_to "Cancel", book_path(@book), class: "btn btn-outline-secondary" %>
+              <%= f.button :submit, "Update Book", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
