--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,8 +5,10 @@
 <% else %>
   <% @books.each do |book| %>
   <div class="book-item">
-    <%= link_to book_path(book) do %>
-      <%= image_tag book.avatar, class: "img-thumbnail", alt: book.title if book.avatar.attached? %>
+   <%= link_to book_path(book) do %>
+      <% if book.avatar.attached? %>
+        <%= image_tag book.avatar, class: "book-thumbnail", alt: book.title %>
+      <% end %>
     <% end %>
     <h2><%= link_to book.title, book_path(book) %></h2>
   </div>
