--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,8 +1,18 @@
-<h1>Edit Review</h1>
-
-
-<%= simple_form_for([@book, @review]) do |f|%>
-  <%= f.input :rating %>
-  <%= f.input :comment %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow">
+        <div class="card-header bg-primary text-white">
+          <h2 class="mb-0">Edit Review</h2>
+        </div>
+        <div class="card-body">
+          <%= simple_form_for([@book, @review]) do |f|%>
+            <%= f.input :rating %>
+            <%= f.input :comment %>
+            <%= f.button :submit %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
