--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-8">
       <div class="card shadow">
         <div class="card-header bg-primary text-white">
-          <h2 class="mb-0">Edit Book</h2>
+          <h2 class="mb-0">New Review</h2>
         </div>
         <div class="card-body">
           <%= simple_form_for([@book, @book.reviews.build]) do |f| %>
