--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,7 +13,7 @@
         <div class="book-actions mt-4 d-flex gap-2">
           <%= link_to "Back", root_path, class: "btn btn-outline-secondary" %>
           <%= link_to "Edit", edit_book_path(@book), class: "btn btn-outline-primary" %>
-          <%= link_to "Delete", book_path(@book), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+          <%= button_to "Delete", book_path(@book), method: :delete, form: { style: "display: inline-block" }, class: "btn btn-outline-danger" %>
         </div>
       <% end %>
     </div>
