--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -6,10 +6,11 @@
   <% if review.user_id == current_user.id %>
 
     <%= link_to "Edit", edit_book_review_path(review.book, review) %>
-    <%= link_to "Delete", book_review_path(review.book, review), method: :delete, data: {
-      confirm: "Are you sure?"
-    } %>
-  
+    <%= button_to "Delete", 
+                book_review_path(review.book, review), 
+                method: :delete,
+                form: { style: "display: inline-block;" },
+                class: "btn btn-sm btn-outline-danger" %>
   <% end %>
   
 <% end %>
