--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -32,7 +32,7 @@
       </div>
       
       <div class="reviews-section">
-        <h3 class="reviews-title mb-3">Reviews <span class="badge bg-primary"><%= @book.reviews.count %></span></h3>
+        <h3 class="reviews-title mb-3">Reviews</h3>
         
         <div class="reviews-container mb-3">
           <% if @book.reviews.any? %>
