--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -5,7 +5,7 @@
   
   <% if review.user_id == current_user.id %>
 
-    <%= link_to "Edit", edit_book_review_path(review.book, review) %>
+    <%= link_to "Edit", edit_book_review_path(review.book, review), class: "btn btn-sm btn-outline-primary", style: "display: inline-block;" %>
     <%= button_to "Delete", 
                 book_review_path(review.book, review), 
                 method: :delete,
